[package]
name = "test_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio ={ version = "1.4.3", features = ["full"]}
serde ={ version = "1.0.218", features = ["derive"]}
serde_json = "1.0.140"
anyhow = "1.0.97"
rand = "0.9.0"
tower-http = { version = "0.6.2", features = ["catch-panic"] }
